css/style.css
/* * {
    margin: 0;
    padding: 0;
}
*/
/* общее */
*{
    margin: 0;
}

/* index.html*/

.header{
    width: 100%;
    height: 80px;
    background-color: rgb(196, 215, 255);
}
.header_logo{
    width: 30%;
    height: 80px;
    background-color: rgb(180, 215, 255);
}
.header_menu{
    width: 50%;
    height: 80px;
    background-color: rgb(170, 215, 255);
}
.header_red{
    width: 20%;
    height: 80px;
    background-color: rgb(180, 215, 255);
}

.header_logo,
.header_menu,
.header_red{
    float: left;
}

.content{
    width: 100%;
    height: 500px;
}
.content_cotegori{
    width: 20%;
    height: 500px;
    background-color: bisque;
}

.content_stati{
    width: 80%;
    height: 500px;
    background-color: coral;
}


.content_cotegori,
.content_stati{
    float: left;
}
.floter{
    width: 100%;
    height: 150px;
    background-color: black;
}



/* test.html*/
.test_block{
    width: 300px;
    height: 300px;
    background-color: chartreuse;
    /* margin-left: 100px;
    margin-top: 80px;  */
    /* margin: 0 auto;  */
    /* padding: 20px; */
    margin: 0 auto;
    border: 3px solid black;
    
}  
.block{
    width: 100px;
    height: 100px;
    background-color: rgb(0, 0, 0);
    margin: 0 auto;
}
.block1{
    width: 100px;
    height: 100px;
    background-color: rgb(255, 255, 255);
    margin: 0 auto;
}

.block,
.block1{
    float: left;
}

.box{
    width: 684px;
    height: 680px;
    background-color: coral;
}

